########################################################################
# Add Subdirectories
########################################################################
ADD_SUBDIRECTORY(${LIBCYBERRADIO_INC_SUBDIR}/Common)
ADD_SUBDIRECTORY(${LIBCYBERRADIO_INC_SUBDIR}/Driver)
ADD_SUBDIRECTORY(${LIBCYBERRADIO_INC_SUBDIR}/NDR651)
