# These files will end up in the install include directory
# For example, /usr/include
# The "nobase_" prefix on the variable name prevents the paths from
# getting stripped before the files get installed. 
nobase_include_HEADERS = \
                         LibCyberRadio/Common/BasicList.h \
                         LibCyberRadio/Common/Debuggable.h \
                         LibCyberRadio/Common/Pythonesque.h \
                         LibCyberRadio/Common/Thread.h \
                         LibCyberRadio/Common/VitaIqSource.h \
                         LibCyberRadio/Common/VitaIqUdpPort.h \
                         LibCyberRadio/Common/Vita49Packet.h \
                         LibCyberRadio/NDR651/DUCSink.h \
                         LibCyberRadio/NDR651/ClientSocket.h \
                         LibCyberRadio/NDR651/FlowControlClient.h \
                         LibCyberRadio/NDR651/PacketTypes.h \
                         LibCyberRadio/NDR651/TransmitPacketizer.h \
                         LibCyberRadio/NDR651/TransmitSocket.h \
                         LibCyberRadio/NDR651/UdpStatusReceiver.h
                         

