########################################################################
# Install Public Header Files
########################################################################
install(FILES
    BasicList.h
    Debuggable.h
    Pythonesque.h
    Thread.h
    VitaIqSource.h
    VitaIqUdpPort.h
    Vita49Packet.h
    DESTINATION ${LIBCYBERRADIO_INCLUDE_DIR}/Common
)
